--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   "dependencies": {
     "@nuxt/image": "^1.3.0",
     "@nuxt/ui": "^2.14.1",
+    "@pinia/nuxt": "^0.5.1",
+    "jwt-decode": "^4.0.0",
     "nuxt": "^3.10.3",
+    "pinia": "^2.1.7",
     "vue": "^3.4.19",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "yarn": "^1.22.21",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.11.4",
