--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@pinia/nuxt": "^0.5.1",
     "jwt-decode": "^4.0.0",
     "nuxt": "^3.10.3",
+    "nuxt-permissions": "^0.2.4",
     "pinia": "^2.1.7",
     "vue": "^3.4.19",
     "vue-router": "^4.3.0",
