--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "yup": "^1.3.3"
   },
   "devDependencies": {
+    "@nuxtjs/i18n": "^8.1.1",
     "@nuxtjs/tailwindcss": "^6.11.4",
     "nuxt-icon": "^0.6.8"
   }
