--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/image": "^1.3.0",
     "@nuxt/ui": "^2.14.1",
     "@pinia/nuxt": "^0.5.1",
+    "flowbite": "^2.3.0",
     "jwt-decode": "^4.0.0",
     "nuxt": "^3.10.3",
     "nuxt-permissions": "^0.2.4",
