--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jwt-decode": "^4.0.0",
     "nuxt": "^3.10.3",
     "nuxt-permissions": "^0.2.4",
+    "nuxt-swiper": "^1.2.2",
     "pinia": "^2.1.7",
     "vue": "^3.4.19",
     "vue-router": "^4.3.0",
